--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <div id="todoers">
 </div>
 <script src="index.js"></script>
+  <ul>
+    <li><a href="/memo-game/index.html">Memo Game</a></li>
+  </ul>
 </body>
 </html>
